50_Days_of_Python

--- a/day1.ipynb
+++ b/day1.ipynb
@@ -27,6 +27,43 @@
    "source": [
     "print(\"Hello World!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,\n",
+      "    my name is Redoy.\n",
+      "    I am a student.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"\"\"Hello,\n",
+    "    my name is Redoy.\n",
+    "    I am a student.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is a comment tag in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
